# parallel-pagerank-mpi-omp

./: .gitignore  CMakeLists.txt  Makefile  README.md  REPORT.md  pagerank.cpp  plot_scaling.py  scaling_plot_code
data/: scaling_results.csv  web-Google-100k.txt
scripts/: run_experiments.sh
src/: generate_graph.py  pagerank_mpi.py  plot_compare.py  plot_results.py
src_cpp/: generate_graph_cpp.cpp  pagerank_mpi_omp.cpp
