cmake_minimum_required(VERSION 3.10)
project(ParallelPageRank CXX)
set(CMAKE_CXX_STANDARD 17)
find_package(MPI REQUIRED)
include_directories(${MPI_CXX_INCLUDE_PATH})
add_executable(pagerank_mpi_omp src_cpp/pagerank_mpi_omp.cpp)
target_compile_options(pagerank_mpi_omp PRIVATE -O3 -fopenmp)
target_link_libraries(pagerank_mpi_omp PRIVATE ${MPI_CXX_LIBRARIES})
add_executable(generate_graph_cpp src_cpp/generate_graph_cpp.cpp)
target_compile_options(generate_graph_cpp PRIVATE -O3)
